Revision history for {{$dist->name}}

{{$NEXT}}
  - Created [Author::Plicease::MakeMaker] in attempt to deal
    with File::ShareDir madness.

1.89      2015-11-22 14:28:47 -0500
  - Minting profile creates t/01_use.t instead of t/use.t which is almost
    always what I move it to anyway.
  - Better default for xt/release/release.yml

1.88      2015-11-18 07:03:59 -0500
  - Allow override of [MinimumPerl]

1.87      2015-11-18 06:28:32 -0500
  - When we see JSON::MaybeXS we will recommend Cpanel::JSON::XS
  - When we see JSON::MaybeXS we will diag on JSON::XS and JSON::PP as well

1.86      2015-11-14 20:31:32 -0500
  - Added undocumented preamble to
    [@Author::Plicease]
    and
    [Author::Plicease::SpecialPrereqs]

1.85      2015-11-03 07:22:39 -0500
  - Add no_readme

1.84      2015-07-30 15:56:35 -0400
  - Added version_plugin option

1.83      2015-07-21 09:08:33 -0400
  - Added upgrade option to [Author::Plicease::SpecialPrereqs]
  - Added upgrade option to [@Author::Plicease]

1.82      2015-07-14 16:20:25 -0400
  - Skip t/mint.t when certain modules aren't available.

1.81      2015-07-13 13:40:13 -0400
  - Use travis CI newer (faster) container based infrastructure by default
    in new dists

1.80      2015-07-02 09:10:06 -0400
  - Allow for [Alien] and inc/My/ModuleBuild.pm

1.79      2015-06-19 10:16:08 -0400
  - Add irc option that sets x_IRC meta

1.78      2015-06-11 11:04:52 -0600
  - Support for Perl 5.10.0
    [@Git] does no longer supports the .0 release of 5.10 but we need
    (as with 5.8.x) so make this one work for everything except for
    releases like 5.8.x and MSWin32.

1.77      2015-05-31 15:28:39 -0400
  - Fix bug introduced in 1.75 for Perls as old as 5.20.2
    I was testing this with a 5.22.0 rc

1.76      2015-05-31 14:55:21 -0400
  - When minting a new project, include a .gitattributes file that will make
    sure that GitHub does not misidentify .t files as being Perl 6.

1.75      2015-05-31 14:42:48 -0400